Initial round of too keep changes from lagergren/options