@@ -7,18 +7,17 @@ import static org.xtclang.plugin.XtcPluginConstants.XTC_CONFIG_NAME_MODULE_DEPEN
 import static org.xtclang.plugin.XtcPluginConstants.XTC_LANGUAGE_NAME;
 import static org.xtclang.plugin.XtcPluginUtils.FileUtils.isValidXtcModuleSafe;
 import static org.xtclang.plugin.XtcPluginUtils.capitalize;
+import static org.xtclang.plugin.XtcPluginUtils.failure;
 
 import java.io.File;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import org.gradle.api.GradleException;
 import org.gradle.api.file.ConfigurableFileCollection;
 import org.gradle.api.file.Directory;
 import org.gradle.api.file.FileCollection;
@@ -28,7 +27,7 @@ import org.gradle.api.provider.Provider;
 
 import org.jetbrains.annotations.NotNull;
 
-import org.xtclang.plugin.tasks.XtcLauncherTask;
+import static java.util.stream.Collectors.toUnmodifiableSet;
 
 /**
  * Resolves and validates the module path for XTC launcher tasks.
@@ -42,13 +41,19 @@ public class ModulePathResolver {
     private final ConfigurableFileCollection customModulePath;
     private final Provider<@NotNull FileCollection> xtcModuleDependencies;
 
-    public ModulePathResolver(final XtcLauncherTask<?> task) {
-        this.logger = task.getLogger();
-        this.objects = task.getObjects();
-        this.xdkContentsDir = task.getInputXdkContents();
-        this.sourceSetOutputDirs = task.getSourceSetOutputDirs();
-        this.customModulePath = task.getModulePath();
-        this.xtcModuleDependencies = task.getXtcModuleDependenciesProvider();
+    public ModulePathResolver(
+            final Logger logger,
+            final ObjectFactory objects,
+            final Provider<@NotNull Directory> xdkContentsDir,
+            final Map<String, Provider<@NotNull Directory>> sourceSetOutputDirs,
+            final ConfigurableFileCollection customModulePath,
+            final Provider<@NotNull FileCollection> xtcModuleDependencies) {
+        this.logger = logger;
+        this.objects = objects;
+        this.xdkContentsDir = xdkContentsDir;
+        this.sourceSetOutputDirs = sourceSetOutputDirs;
+        this.customModulePath = customModulePath;
+        this.xtcModuleDependencies = xtcModuleDependencies;
     }
 
     public List<File> resolveFullModulePath() {
@@ -59,20 +64,24 @@ public class ModulePathResolver {
 
         // If custom module path is specified, use it instead of xtcModule dependencies
         // This supports aggregator projects that collect modules in a custom location
-        if (!customModulePath.isEmpty()) {
-            final Set<File> customModulePathSet = resolveAsDirectories(customModulePath);
-            map.put("customModulePath", customModulePathSet);
-        } else {
+        if (customModulePath.isEmpty()) {
             // Use xtcModule dependencies only when no custom module path is set
-            final Set<File> xtcModuleDeclarations = resolveFiles(xtcModuleDependencies.get());
+            final var xtcModuleDeclarations = resolveFiles(xtcModuleDependencies.get());
             map.put(XTC_CONFIG_NAME_MODULE_DEPENDENCY, xtcModuleDeclarations);
+        } else {
+            final var customModulePathSet = resolveAsDirectories(customModulePath);
+            map.put("customModulePath", customModulePathSet);
         }
 
         for (final var entry : sourceSetOutputDirs.entrySet()) {
             final String sourceSetName = entry.getKey();
             final Provider<@NotNull Directory> outputDir = entry.getValue();
-            final Set<File> sourceSetOutput = resolveDirectories(outputDir);
-            map.put(XTC_LANGUAGE_NAME + capitalize(sourceSetName), sourceSetOutput);
+            final File outputDirFile = outputDir.get().getAsFile();
+            if (!outputDirFile.exists()) {
+                logger.info("[plugin] Skipping non-existent source set output directory for '{}': {}", sourceSetName, outputDirFile.getAbsolutePath());
+                continue;
+            }
+            map.put(XTC_LANGUAGE_NAME + capitalize(sourceSetName), resolveDirectories(outputDir));
         }
 
         logger.info("[plugin] Compilation/runtime full module path resolved as: ");
@@ -90,7 +99,6 @@ public class ModulePathResolver {
                 logger.info("[plugin]         (empty)");
             }
             files.forEach(f -> logger.info("[plugin]         {}", f.getAbsolutePath()));
-
             modulePathList.addAll(files.stream().filter(f -> {
                 if (f.isDirectory()) {
                     logger.info("[plugin] Adding directory to module path ({}).", f.getAbsolutePath());
@@ -102,15 +110,13 @@ public class ModulePathResolver {
             }).toList());
         });
 
-        final Set<File> modulePathSet = modulePathList.stream().collect(Collectors.toUnmodifiableSet());
+        // Check that we don't have name collisions with the same dependency declared in several places.
+        final var modulePathSet = modulePathList.stream().collect(Collectors.toUnmodifiableSet());
         final int modulePathListSize = modulePathList.size();
         final int modulePathSetSize = modulePathSet.size();
-
-        // Check that we don't have name collisions with the same dependency declared in several places.
         if (modulePathListSize != modulePathSetSize) {
             logger.warn("[plugin] There are {} duplicated modules on the full module path.", modulePathListSize - modulePathSetSize);
         }
-
         checkDuplicatesInModulePaths(modulePathSet);
 
         // Check that all modules on path are XTC files.
@@ -127,20 +133,20 @@ public class ModulePathResolver {
                 //  The Set data structure already takes care of silently removing them, however.
                 continue;
             }
-            final List<File> dupes = modulePathSet.stream().filter(File::isFile).filter(f -> f.getName().equals(module.getName())).toList();
-            assert !dupes.isEmpty();
-            if (dupes.size() != 1) {
-                throw new GradleException("[plugin] A dependency with the same name is defined in more than one (" + dupes.size() + ") location on the module path.");
+            final var dups = modulePathSet.stream().filter(File::isFile).filter(f -> f.getName().equals(module.getName())).toList();
+            assert !dups.isEmpty();
+            if (dups.size() != 1) {
+                throw failure("A dependency with the same name is defined in more than one ({}) location on the module path.", dups.size());
             }
         }
     }
 
     public static Set<File> resolveFiles(final FileCollection files) {
-        return files.isEmpty() ? Collections.emptySet() : files.getAsFileTree().getFiles();
+        return files.isEmpty() ? Set.of() : files.getAsFileTree().getFiles();
     }
 
     public static Set<File> resolveDirectories(final Set<File> files) {
-        return files.stream().map(f -> requireNonNull(f.getParentFile())).collect(Collectors.toUnmodifiableSet());
+        return files.stream().map(f -> requireNonNull(f.getParentFile())).collect(toUnmodifiableSet());
     }
 
     /**
@@ -149,16 +155,9 @@ public class ModulePathResolver {
      */
     public static Set<File> resolveAsDirectories(final FileCollection files) {
         if (files.isEmpty()) {
-            return Collections.emptySet();
+            return Set.of();
         }
-        return files.getFiles().stream()
-                .map(f -> f.isDirectory() ? f : requireNonNull(f.getParentFile()))
-                .collect(Collectors.toUnmodifiableSet());
-    }
-
-    @SuppressWarnings("unused")
-    protected Set<File> resolveFiles(final Provider<@NotNull Directory> dirProvider) {
-        return resolveFiles(objects.fileCollection().from(dirProvider));
+        return files.getFiles().stream().map(f -> f.isDirectory() ? f : f.getParentFile()).collect(toUnmodifiableSet());
     }
 
     protected Set<File> resolveDirectories(final Provider<@NotNull Directory> dirProvider) {
